<resources>
    <string name="app_name">ZoyThree</string>
    <string name="company_link">www.zoythree.com</string>
    <string name="user_name">User Name</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="forgetpassword">Forget Passwod?</string>
    <string name="do_not_have_account">Dont hava an account?</string>
    <string name="signup">Sign Up</string>
    <string name="user_email">example@gmail.com</string>
    <string name="user_phone">0113578875654</string>
    <string name="user_confirm_password">Confirm Password</string>
    <string name="have_account">Have an account?</string>
    <string name="send">Send</string>
    <string name="change_password">Change Password</string>
    <string name="save">Save</string>
    <string name="shopping_cart">Shopping Cart</string>
    <string name="item_name">Tv Alaraby</string>
    <string name="cart_quant">1</string>
    <string name="price">Price:</string>
    <string name="price_value">2</string>
    <string name="empty_cart">No Products Found</string>
    <string name="checkOut">Checkout</string>
    <string name="total_price">Total Price:</string>
    <string name="delivry_fee">Delivery Free:</string>
    <string name="set_location">Set Location</string>
    <string name="search">Search</string>
    <string name="current_location">Current Location:</string>
    <string name="location_example">Street,Area,Country,City.</string>
    <string name="or">Or</string>
    <string name="country">Country:</string>
    <string name="city">City:</string>
    <string name="area">Area:</string>
    <string name="building">Building:</string>
    <string name="country_input">country</string>
    <string name="city_input">city</string>
    <string name="area_input">area</string>
    <string name="building_input">building</string>
    <string name="delivery_address">Delivery Address</string>
    <string name="my_order">My Order</string>
    <string name="process_tab">Process</string>
    <string name="onway_tab">On Way</string>
    <string name="completed_tab">Completed</string>
    <string name="order_number_value">Order No.....#1234565</string>
    <string name="order_time_value">31 March 2019-10:00Am</string>
    <string name="notification_time">2 min.</string>
    <string name="cancel_order">Cancel Order</string>
    <string name="delivery_address_value">Delivery Address:</string>
    <string name="payment_method">Payment Method:</string>
    <string name="payment_method_value">Credit Card</string>
    <string name="order">Order:</string>
    <string name="cost">Cost:</string>
    <string name="delivery_free">Delivery Free:</string>
    <string name="delivery_free_value">1</string>
    <string name="total_price_value">12</string>
    <string name="estimated_time">Estimated Time:</string>
    <string name="estimated_time_value">15 minutes.</string>
    <string name="my_notifications">Notification</string>
    <string name="notification_message">Your order has been processed.</string>
    <string name="my_wishlist">My Wishlist</string>
    <string name="forgetpasswor">Forget Password</string>
    <string name="setting">Setting</string>
    <string name="settings_language">Language:</string>
    <string name="language_val">English</string>
    <string name="arabic">العربية</string>
    <string name="done">Done</string>
    <string name="profile">Profile</string>
    <string name="address">Address:</string>
    <string name="prof_password">Password:</string>
    <string name="pass_val">******************</string>
    <string name="profile_edit_data">Profile-Edit Data</string>
    <string name="contact_us">Contact Us</string>
    <string name="phone">Phone:</string>
    <string name="website">Website:</string>
    <string name="email">Email:</string>
    <string name="email_value">company@gmail.com</string>
    <string name="send_message">Send Message</string>
    <string name="your_email">Your Email</string>
    <string name="subject">Subject</string>
    <string name="message">Message</string>
    <string name="about_Us">About Us</string>
    <string name="about_Us_text">Write here some details about tha app.......</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="cash_on_delivery">Cash On Delivery</string>
    <string name="credit_card">Online by Credit Card</string>
    <string name="card_numer">Card Number:</string>
    <string name="expire_date">Expire Date:</string>
    <string name="cvv">Cvv:</string>
    <string name="cardholder_name">Cardholder Name:</string>
    <string name="save_card_information">Save Card Information</string>
    <string name="credit_card_details">Credit Card Details</string>
    <string name="sucess">Success</string>
    <string name="thank_for_shopping">Thank you for shopping</string>
    <string name="track_order">Track Order</string>
    <string name="back_shop">Back to Shop</string>
    <string name="set_your_location">Set your Location on Map</string>
    <string name="use_current_location">User Current Location</string>
    <string name="location_manually">Set your location manually</string>
    <string name="checkout">Checkout</string>
    <string name="delivery_date">Delivery Date:</string>
    <string name="delivery_date_value_txV">10Am ,Sunday,March 2019</string>
    <string name="confirm_order">Confirm Order</string>
    <string name="verification_code">Verification Code</string>
    <string name="verification_message">You will receive an SMS with a code to verify your phone</string>
</resources>
