<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="5dp"
    android:padding="4dp"
    app:cardCornerRadius="5dp">

    
    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">

        <ImageView
            android:id="@+id/process_icon_img"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:src="@drawable/ic_person_black_24dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            app:layout_constraintStart_toEndOf="@id/process_icon_img"
            app:layout_constraintTop_toTopOf="@id/process_icon_img"
            android:text="@string/order_number_value"
            android:id="@+id/order_number_txtV"
            android:textColor="@color/black"
            android:textSize="14sp"/>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14dp"
            android:textColor="@color/black"
            android:id="@+id/order_time_txtV"
            android:text="@string/order_time_value"
            app:layout_constraintStart_toStartOf="@id/order_number_txtV"
            app:layout_constraintTop_toBottomOf="@id/order_number_txtV"/>


        <TextView
            android:id="@+id/order_state_txtV_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/process_tab"
            android:textColor="@color/blue"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="@id/order_number_txtV"
            app:layout_constraintTop_toBottomOf="@id/order_time_txtV" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/notification_time"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <android.support.design.button.MaterialButton
            android:id="@+id/received_order_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@color/blue"
            android:text="@string/cancel_order"
            android:textAllCaps="false"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/order_state_txtV_id" />






    </android.support.constraint.ConstraintLayout>
    
</android.support.v7.widget.CardView>