<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OrderActivity.Completed.OrderCompletedDetailsActivity"
    android:background="@color/white">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:id="@+id/app_bar"
        android:background="@color/blue">

        <android.support.v7.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@android:color/transparent">

            <TextView
                android:id="@+id/item_name_toolbar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|center_vertical"
                android:text="@string/order_number_value"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_gravity="left|center_vertical"
                android:id="@+id/signUp_back_img"
                android:layout_marginStart="8dp"
                android:scaleType="fitXY"
                android:src="@drawable/ic_arrow_back_black_24dp"
                />
        </android.support.v7.widget.Toolbar>
    </android.support.design.widget.AppBarLayout>

    <ImageView
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:src="@drawable/ic_person_black_24dp"
        app:layout_constraintTop_toBottomOf="@id/app_bar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:id="@+id/process_icon_img"
        android:layout_marginTop="10dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/process_txtV"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/process_icon_img"
        android:text="@string/process_tab"
        android:textColor="@color/blue"
        android:layout_marginTop="5dp"
        android:textSize="16sp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/process_txtV"
        android:text="@string/order_number_value"
        android:textColor="@color/black"
        android:layout_marginTop="5dp"
        android:textSize="15sp"
        android:id="@+id/order_number_txtV"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/order_number_txtV"
        android:text="@string/order_time_value"
        android:id="@+id/order_time_txtV"
        android:textColor="@color/black"
        android:layout_marginTop="4dp"
        android:textSize="15sp" />

    <android.support.constraint.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/app_bar"
        app:layout_constraintEnd_toEndOf="@id/app_bar"
        app:layout_constraintTop_toBottomOf="@id/order_time_txtV"
        app:layout_constraintBottom_toTopOf="@id/received_order_btn"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="20dp"
        android:id="@+id/constraint_root"
        android:background="@drawable/border">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:text="@string/delivery_address"
            android:id="@+id/delivery_address"
            android:layout_marginStart="10dp"
            android:textColor="@color/black"
            android:textSize="16sp"
            tools:ignore="RtlCompat"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/delivery_address"
            app:layout_constraintTop_toBottomOf="@id/delivery_address"
            android:text="@string/location_example"
            android:textColor="@color/gray"
            android:id="@+id/delivery_address_value_txtV"
            android:textSize="14sp"/>

        <View
            android:layout_width="0dp"
            android:layout_height="2dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/delivery_address_value_txtV"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:background="@color/gray"
            android:id="@+id/view1"
            />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/delivery_address"
            app:layout_constraintTop_toBottomOf="@id/view1"
            android:text="@string/payment_method"
            android:id="@+id/payment_method"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/delivery_address"
            app:layout_constraintTop_toBottomOf="@id/payment_method"
            android:text="@string/payment_method_value"
            android:textColor="@color/gray"
            android:id="@+id/payment_method_value_txtV"
            android:textSize="14sp"/>

        <View
            android:layout_width="0dp"
            android:layout_height="2dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/payment_method_value_txtV"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:background="@color/gray"
            android:id="@+id/view2"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/delivery_address"
            app:layout_constraintTop_toBottomOf="@id/view2"
            android:text="@string/order"
            android:id="@+id/order"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"/>


        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="60dp"
            app:layout_constraintStart_toStartOf="@id/delivery_address"
            app:layout_constraintEnd_toEndOf="@id/view3"
            app:layout_constraintTop_toBottomOf="@id/order"
            app:layout_constraintBottom_toTopOf="@+id/view3"
            android:layout_marginBottom="15dp"
            android:layout_marginTop="10dp"
            android:id="@+id/frame_root">

            <android.support.v7.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/recycler_order"/>

            <ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:id="@+id/order_progress_id"
                android:visibility="gone"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:id="@+id/process_order_empty_id"
                android:text="@string/empty_cart"
                android:visibility="gone"
                />

        </FrameLayout>

        <View
            android:layout_width="0dp"
            android:layout_height="2dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/frame_root"
            app:layout_constraintBottom_toTopOf="@id/cost"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:background="@color/gray"
            android:id="@+id/view3"
            />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/delivery_address"
            app:layout_constraintTop_toBottomOf="@id/view3"
            android:text="@string/cost"
            android:id="@+id/cost"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"/>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/delivery_address"
            app:layout_constraintTop_toBottomOf="@id/cost"
            android:text="@string/price"
            android:textColor="@color/gray"
            android:id="@+id/price"
            android:textSize="14sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/delivery_address"
            app:layout_constraintTop_toBottomOf="@id/price"
            android:text="@string/delivery_free"
            android:textColor="@color/gray"
            android:id="@+id/delivery_free"
            android:textSize="14sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/delivery_address"
            app:layout_constraintTop_toBottomOf="@id/delivery_free"
            android:text="@string/total_price"
            android:textColor="@color/black"
            android:id="@+id/total_price"
            android:textSize="14sp"/>



        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="10dp"
            app:layout_constraintTop_toBottomOf="@id/cost"
            android:text="@string/price_value"
            android:textColor="@color/gray"
            android:id="@+id/price_value_txV"
            android:textSize="14sp"/>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/price_value_txV"
            app:layout_constraintTop_toBottomOf="@id/price_value_txV"
            android:text="@string/delivery_free_value"
            app:layout_constraintEnd_toEndOf="@id/price_value_txV"
            android:textColor="@color/gray"
            android:id="@+id/delivery_free_value_txV"
            android:textSize="14sp"/>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/price_value_txV"
            app:layout_constraintTop_toBottomOf="@id/delivery_free_value_txV"
            android:text="@string/total_price_value"
            android:textColor="@color/black"
            android:id="@+id/total_price_value_txtV"
            app:layout_constraintEnd_toEndOf="@id/price_value_txV"
            android:textSize="14sp"/>

        <View
            android:layout_width="0dp"
            android:layout_height="2dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/total_price"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:background="@color/gray"
            android:id="@+id/view4"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/delivery_address"
            app:layout_constraintTop_toBottomOf="@id/view4"
            android:text="@string/estimated_time"
            android:id="@+id/estimated_time"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="16sp"/>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/delivery_address"
            app:layout_constraintTop_toBottomOf="@id/estimated_time"
            android:text="@string/estimated_time_value"
            android:textColor="@color/gray"
            android:id="@+id/estimated_time_value_txtV"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="10dp"
            />


    </android.support.constraint.ConstraintLayout>



</android.support.constraint.ConstraintLayout>