<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignInActivity"
    android:background="@color/white">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:src="@drawable/signin_logo"
        android:layout_marginTop="30dp"
        android:id="@+id/logo_img"
        />


    <android.support.design.widget.TextInputLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logo_img"
        android:layout_marginTop="40dp"
        android:id="@+id/user_name_input"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        >
        <EditText
            android:drawablePadding="20dp"
            android:hint="@string/user_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/signup_username"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/user_name_input"
        app:layout_constraintEnd_toEndOf="@id/user_name_input"
        app:layout_constraintTop_toBottomOf="@id/user_name_input"
        android:layout_marginTop="15dp"
        android:id="@+id/password_input">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:drawablePadding="20dp"
            android:drawableStart="@drawable/signup_password"/>
    </android.support.design.widget.TextInputLayout>


    <android.support.design.button.MaterialButton
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/blue"
        app:layout_constraintTop_toBottomOf="@+id/password_input"
        app:layout_constraintStart_toStartOf="@id/user_name_input"
        app:layout_constraintEnd_toEndOf="@id/user_name_input"
        android:layout_marginTop="30dp"
        android:textStyle="bold"
        android:textSize="16sp"
        android:text="@string/sign_in"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:id="@+id/sign_in_btn"/>


    <TextView
        android:id="@+id/forget_pass_txtV_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgetpassword"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sign_in_btn"
        android:layout_marginTop="30dp"
        />

    <LinearLayout
        android:id="@+id/signUp_layout_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/forget_pass_txtV_id">

        <TextView
            android:id="@+id/dont_have_account_txtV_id"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/do_not_have_account"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/signUp_txtV_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:text="@string/signup"
            android:textColor="@color/blue"
            android:textStyle="bold" />

    </LinearLayout>







</android.support.constraint.ConstraintLayout>